--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -1,5 +1,5 @@
 {
-  "App.core.description": "The Long-Term Jobs Market of Haiti",
+  "App.core.description": "HT LANGUAGE",
   "App.nav.jobs": "Jobs",
   "App.nav.profile": "Profile",
   "App.nav.wallet": "Wallet",
