--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -1,102 +1,101 @@
 {
-  "App.core.description": "The Long-Term Jobs Market of Haiti",
-  "App.nav.jobs": "Jobs",
-  "App.nav.profile": "Profile",
-  "App.nav.wallet": "Wallet",
-  "App.nav.signin": "Sign in",
-  "App.nav.signout": "Sign out",
-  "App.nav.createJob": "Post a Job",
+  "App.core.description": "Travay nan long tèm mache nan Ayiti",
+  "App.nav.jobs": "Travay",
+  "App.nav.profile": "Pwofil",
+  "App.nav.wallet": "Bous",
+  "App.nav.signin": "Siyen Nan",
+  "App.nav.signout": "dekonekte",
+  "App.nav.createJob": "Post yon Travay",
   "App.nav.kreyol": "kreyòl",
   "App.nav.french": "Francais",
   "App.nav.english": "Angle",
-  "App.nav.home": "Home",
-  "App.sectionOne.blockTitle": "Earn Stable Income",
-  "App.sectionOne.blockHeader": "Same Day Jobs Marketplace",
+  "App.nav.home": "Paj Lakay",
+  "App.sectionOne.blockTitle": "Fè lajan ki estab",
+  "App.sectionOne.blockHeader": "Menm jou Travay Marketplace la",
   "App.sectionOne.blockText":
-  "Travay provides a citizen driven, long-term jobs market, helping to provide to economic mobility.",
-    "App.sectionTwo.blockTitle": "Receive Instant Payments",
-  "App.sectionTwo.blockHeader": "Jobs Paid in Cryptocurrency",
-  "App.sectionTwo.blockText":
-  "Cryptocurrency Payment = Instant Access to Your Money.",
-    "App.sectionFour.blockTitle": "How Does Travay Work?",
-  "App.sectionFour.bullet1": "Register by signing in",
-  "App.sectionFour.bullet2": "Find a job your want and click claim",
+  "Travay bay yon sitwayen kondwi, alontèm djòb mache, ede bay mobilite ekonomik.",
+  "App.sectionTwo.blockTitle": "Resevwa Peman Instant",
+  "App.sectionTwo.blockHeader": "Travay peye nan Cryptocurrency",
+  "App.sectionTwo.blockText": "Cryptocurrency Peman = instant aksè a lajan ou",
+  "App.sectionFour.blockTitle": "Kijan Travay, Travay?",
+  "App.sectionFour.bullet1": "Enskri pa siyen nan",
+  "App.sectionFour.bullet2":
+  "Jwenn yon travay ou vle epi klike sou reklamasyon",
   "App.sectionFour.bullet3":
-  "When work is complete, upload your proof of work and click complete job",
-    "App.sectionFour.bullet4":
-  "Your Job Manager will approve work and issue payment",
-    "App.sectionFour.paragraph":
-  "Find a job, claim it with no experience needed!",
-    "App.job.editJobIcon": "Edit",
-  "App.job.pageHeader": "Job",
-  "App.job.jobDescription": "Description",
-  "App.job.jobDomain": "Domain",
-  "App.job.jobSkill": "Skill",
-  "App.job.salaryIsEditing": "Salary cannot be changed after job is posted.",
+  "Lè travay la konplete, Upload prèv ou nan travay epi klike sou travay konplè",
+  "App.sectionFour.bullet4":
+  "Manadjè travay ou ap apwouve travay ak peman pwoblèm",
+  "App.sectionFour.paragraph":
+  "Jwenn yon travay, reklame li ki pa gen okenn eksperyans ki nesesè!",
+  "App.job.editJobIcon": "Modifye",
+  "App.job.pageHeader": "Travay",
+  "App.job.jobDescription": "Deskripsyon",
+  "App.job.jobDomain": "Domèn",
+  "App.job.jobSkill": "Konpetans",
+  "App.job.salaryIsEditing": "Salè pa ka chanje apre travay la afiche.",
   "App.job.payFrequencyIsEditing":
-  "Pay frequency cannot be changed after job is posted.",
-    "App.job.termOfEmploymentIsEditing":
-  "Term of Employment cannot be changed after job is posted.",
-    "App.job.requirementInstructions":
-  "Add one requirement, then click Add Requirement, to add additional requirements.",
-    "App.job.addRequirement": "Add Requirement",
+  "Peye frekans pa ka chanje apre travay la afiche.",
+  "App.job.termOfEmploymentIsEditing":
+  "Peryòd travay la pa ka chanje apre travay la afiche.",
+  "App.job.requirementInstructions":
+  "Ajoute yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
+  "App.job.addRequirement": "Ajoute Kondisyon",
   "App.job.jobFullTimeRate": "Full-Time-Rate",
-  "App.job.jobSponsoredAmount": "Sponsored Amount",
-  "App.job.jobPayFrequency": "Pay Frequency",
-  "App.job.termsOfEmployment": "Terms of Employment",
-  "App.job.requirements": "Requirements",
-  "App.job.postChangesButton": "Post Changes",
-  "App.job.cancleJob": "Cancel Job",
-  "App.job.datePosted": "Date Posted",
-  "App.job.claimTitle": "Claim",
+  "App.job.jobSponsoredAmount": "Patwone kantite lajan an",
+  "App.job.jobPayFrequency": "Peye frekans",
+  "App.job.termsOfEmployment": "Regleman nan Travay",
+  "App.job.requirements": "Kondisyon",
+  "App.job.postChangesButton": "Pòs chanjman",
+  "App.job.cancleJob": "Anile Travay",
+  "App.job.datePosted": "Dat li te ye",
+  "App.job.claimTitle": "Reklamasyon",
   "App.job.claimDescription":
-  "A job is claimed when an individual has chosen to accept the work. A potential worker will see in this area any additional criteria and requirements before accepting the job.",
-    "App.job.sponsorDescription":
-  "Job sponsorship is where anyone in the world can donate and contribute to the workplace ecosystem. Choosing to sponsor ensures transparency in funds donated and incentives job workers to continue to perform and accept jobs.",
-    "App.job.claimDisclaimer":
-  "Claiming this position is to accept the job requirements and terms and conditions of Travay.",
-    "App.job.sponsorJobButton": "Sponsor Job",
-  "App.job.proofOfWorkTitle": "Proof of Work",
-  "App.job.uploadProofOfWorkTitle": "Upload Proof of Work",
+  "Yon travay te reklame lè yon moun te chwazi yo aksepte travay la. Yon travayè potansyèl pral wè nan zòn sa a nenpòt lòt kritè ak kondisyon anvan yo aksepte travay la.",
+  "App.job.sponsorDescription":
+  "Travay parennaj se kote nenpòt moun nan mond lan ka bay ak kontribye nan ekosistèm travay la. Chwazi pou patwone asire transparans nan lajan ki bay ak ankourajman travayè travay pou kontinye fè ak aksepte travay.",
+  "App.job.claimDisclaimer":
+  "Reklamasyon pozisyon sa a se aksepte kondisyon travay yo ak tèm ak kondisyon nan travay.",
+  "App.job.sponsorJobButton": "Sponsor yon Travay",
+  "App.job.proofOfWorkTitle": "Prèv Travay",
   "App.job.proofOfWorkDescription":
-  "Based on the requirements of a job, the Job Manager may request proof that work was completed. For example, a picture of a planted tree or that trash was deposited in the correct location.",
-    "App.job.uploadFileButton": "Submit Proof",
-  "App.job.approveWork": "Approve Work",
+  "Ki baze sou egzijans yon djòb, Manadjè Job la ka mande prèv ke travay te fini. Pa egzanp, gen yon foto yon pyebwa plante oswa ki fatra depoze nan kote kòrèk la.",
+  "App.job.uploadProofOfWorkTitle": "Voye prèv travay",
+  "App.job.uploadFileButton": "Soumèt Prèv",
+  "App.job.approveWork": "Apwouve travay",
   "App.job.approveWorkDescription":
-  "Approval history will be shown here. Once a job is approved, the job is marked complete and the worker receives their salary. This is not reversible.",
-    "App.job.payoutJobButton": "Payout Job",
-  "App.job.jobCanceledNotificationTitle": "Success!",
-  "App.job.jobCanceledNotificationText": "This job has been cancelled.",
-  "App.job.jobSavedNotificationTitle": "Success",
-  "App.job.jobSavedNotification": "The job has been saved!",
+  "Apwobasyon istwa yo pral montre isit la. Yon fwa ke yon travay apwouve, travay la make konplè epi travayè a resevwa salè yo. Sa a se pa revèsib.",
+  "App.job.payoutJobButton": "Peye Travay",
+  "App.job.jobCanceledNotificationTitle": "Siksè!",
+  "App.job.jobCanceledNotificationText": "Travay sa a te anile.",
+  "App.job.jobSavedNotificationTitle": "Siksè",
+  "App.job.jobSavedNotification": "Travay la te sove!",
   "App.job.jobEmptyFieldNotificationTitle": "Oops",
-  "App.job.jobEmptyFieldNotificationText": "Please complete all fields.",
+  "App.job.jobEmptyFieldNotificationText": "Tanpri ranpli tout jaden.",
   "App.job.jobClaimedNotificationTitle": "Yay!",
   "App.job.jobClaimedNotificationText":
-  "Job confirmed successfully! You can start work immediately.",
-    "App.job.jobPayoutNotificationTitle": "Your worker thanks you!",
+  "Travay konfime avèk siksè! Ou ka kòmanse travay imedyatman.",
+  "App.job.jobPayoutNotificationTitle": "Travayè ou gras ou!",
   "App.job.jobPayoutNotificationTitleText":
-  "Payout Complete. Your account is being debited.",
-    "App.job.jobUpdatedNotificationTitle": "Success!",
-  "App.job.jobUpdatedNotificationText": "Job updated successfully",
-  "App.job.jobPayout": "Payout Complete. Your account is being debited.",
-  "App.job.uploadedPhotoSuccessfully": "Post was created successfully.",
-  "App.job.uploadedPhotoProgress": "Upload is",
-  "App.job.uploadedPhotoProgress2": "% done. Processing post.",
-  "App.job.markJobComplete": "Job is Done",
-  "App.job.jobCompletedNotificationTitle": "Success",
+  "Peye Ranpli. Se kont ou ke yo te debite.",
+  "App.job.jobUpdatedNotificationTitle": "Siksè!",
+  "App.job.jobUpdatedNotificationText": "Travay mete ajou avèk siksè!",
+  "App.job.jobPayout": "Peye Ranpli. Se kont ou ke yo te debite.",
+  "App.job.uploadedPhotoSuccessfully": "Travay te kreye avèk siksè.",
+  "App.job.uploadedPhotoProgress": "Voye se",
+  "App.job.uploadedPhotoProgress2": "% fè. Post Processing.",
+  "App.job.markJobComplete": "Jòb se fè",
+  "App.job.jobCompletedNotificationTitle": "Siksè",
   "App.job.jobCompleteNotificationText":
-  "This job has been marked completed. Your Job Manager and Evaluator will review the work and send payment after confirming.",
-    "App.jobs.pageSubtitle": "Here you'll find 6-month and 12-month jobs.",
-  "App.jobs.search": "Search",
-  "App.jobs.filter": "Filter",
+  "Travay sa a te make konplete. Manadjè travay ou a pral revize travay la epi voye peman apre konfime.",
+  "App.jobs.pageSubtitle": "Men w ap jwenn travay 6 mwa ak 12 mwa.",
+  "App.jobs.search": "Rechèch",
+  "App.jobs.filter": "Filtre",
   "App.createJob.salaryPayoutDisclaimer":
-  "Remember: (1) The salary you list above will be deducted and paid to the worker evenly based on the pay frequency (aka pay period) you've selected. (2) We collect 2% of the total salary amount. Based on the salary you have entered above the worker in total will receive approximately: ",
-    "App.createJob.pageDescription":
-  "Use the form below to create a 6-month or 12-month job.",
-    "App.createJob.requirementInstructions":
-  "Please add your requirements in order for the job to be considered as complete. Add one requirement, then click Add Requirement, to add additional requirements.",
-    "components.autocomplete.emptyMessage": "No options found for %s",
+  "Sonje: (1) Yo pral dedwi salè ou anwo a epi yo te fè travayè a respektif ki baze sou frekans peye (aka peryòd peye) ou te chwazi a. (2) Nou kolekte 2% kantite lajan total salè. Ki baze sou salè ou te antre anwo a travayè total la ap resevwa apeprè: ",
+  "App.createJob.pageDescription":
+  "Itilize fòm ki anba a pou kreye yon travay 6 mwa oswa 12 mwa.",
+  "App.createJob.requirementInstructions":
+  "Tanpri ajoute kondisyon ou yo nan lòd pou travay la yo dwe konsidere kòm konplè. Add yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
   "components.calendar.friday.short": "F",
   "components.calendar.monday.short": "M",
   "components.calendar.saturday.short": "S",
@@ -104,28 +103,30 @@
   "components.calendar.thursday.short": "T",
   "components.calendar.tuesday.short": "T",
   "components.calendar.wednesday.short": "W",
-  "components.dataTable.noResults": "No results found!",
-  "components.formExample.zipCode.error": "Please enter a Number",
+  "components.dataTable.noResults": "Pa gen rezilta yo te jwenn!",
+  "components.formExample.zipCode.error": "Tanpri antre yon Nimewo",
   "components.markdown":
   "### Markdown support\n - build on top of marked\n - server side rendering!!!\n - `github style` markdown",
-    "components.pagination.next": "Next",
+  "components.pagination.next": "Apre sa",
   "components.pagination.previous": "Previous",
-  "components.register.cancellationText": "Cancel",
-  "components.register.consent": "I consent to get contacted",
-  "components.register.email": "Email",
-  "components.register.email.invalidText": "This is not a valid email address!",
+  "components.register.cancellationText": "Anile",
+  "components.register.consent": "Mwen konsanti pou w kontakte",
+  "components.register.email": "Imèl",
+  "components.register.email.invalidText":
+  "Sa a se pa yon adrès imel ki valab!",
   "components.register.name": "Name",
   "components.register.name.invalidText": "Please provide first and last name",
-  "components.register.phone": "Phone",
-  "components.register.phone.invalidText": "This is not a valid phone number!",
+  "components.register.phone": "Telefòn",
+  "components.register.phone.invalidText":
+  "Sa a se pa yon nimewo telefòn ki valab!",
   "components.register.submit.notification.text":
-  "We've sent an email to: {email}!",
-    "components.register.submit.notification.title": "Hey {name}!",
-  "components.register.submitText": "Submit",
-  "components.register.subtitle": "Please fill in all required fields",
+  "Nou te voye yon imèl bay: {email}!",
+  "components.register.submit.notification.title": "Hey {name}!",
+  "components.register.submitText": "Soumèt",
+  "components.register.subtitle": "Tanpri ranpli tout jaden obligatwa yo",
   "components.register.terms":
   "I accept the <a href=\"/\">Terms and Conditions</a>",
-    "components.register.title": "Register",
-  "components.truncate.showLess": "Show less",
-  "components.truncate.showMore": "Show more"
+  "components.register.title": "Enskri",
+  "components.truncate.showLess": "Montre mwens",
+  "components.truncate.showMore": "Montre plis"
 }
