--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -27,6 +27,7 @@
     "Your Job Manager will approve work and issue payment",
   "App.sectionFour.paragraph":
     "Find a job, claim it with no experience needed!",
+  "App.job.claim": "Claim",
   "App.job.editJobIcon": "Edit",
   "App.job.pageHeader": "Job",
   "App.job.jobDescription": "Description",
