--- a/i18n/en.json
+++ b/i18n/en.json
@@ -28,6 +28,7 @@
   "App.sectionFour.paragraph":
     "Find a job, claim it with no experience needed!",
   "App.profile.updateProfile": "Update Profile",
+  "App.profile.optInTexts": "I want to receive text messages when there are new jobs.",
   "App.job.claim": "Claim",
   "App.job.claimPayout": "Claim Payout",
   "App.job.editJobIcon": "Edit",
