added translations, added more escrow contract functions, added metamask installation guide

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -27,8 +27,11 @@
     "Your Job Manager will approve work and issue payment",
   "App.sectionFour.paragraph":
     "Find a job, claim it with no experience needed!",
-  "App.profile.updateProfile": "Update Profile",
+  "App.job.editProfileIcon": "Editing Profile",
+  "App.job.notEditingProfileIcon": "Edit Profile",
+  "App.profile.updateProfileButton": "Update Profile",
   "App.profile.optInTexts": "I want to receive text messages when there are new jobs.",
+  "App.profile.updateProfile": "Update mobile number.",
   "App.job.claim": "Claim",
   "App.job.claimPayout": "Claim Payout",
   "App.job.editJobIcon": "Edit",
@@ -47,7 +50,7 @@
   "App.job.jobFullTimeRate": "Full-Time-Rate",
   "App.job.jobSponsoredAmount": "Sponsored Amount",
   "App.job.jobPayFrequency": "Pay Frequency",
-  "App.job.termsOfEmployment": "Terms of Employment",
+  "App.job.termsOfEmployment": "Terms of Employment (Months)",
   "App.job.requirements": "Requirements",
   "App.job.postChangesButton": "Post Changes",
   "App.job.cancleJob": "Cancel Job",
@@ -96,6 +99,7 @@
   "App.jobs.pageSubtitle": "Here you'll find 6-month and 12-month jobs.",
   "App.jobs.search": "Search",
   "App.jobs.filter": "Filter",
+  "App.createJob.termOfEmploymentExplanation": "Months of work is also referenced as milestones. The total amount you fund for this job will be divided by the number of milestones or total months of employment.",
   "App.createJob.acceptTerms": "I accept the Terms, Privacy Policy and Code of Conduct.",
   "App.createJob.submitPostAJob": "Submit Job Posting",
   "App.createJob.salaryPayoutDisclaimer":
