--- a/i18n/en.json
+++ b/i18n/en.json
@@ -27,6 +27,7 @@
     "Your Job Manager will approve work and issue payment",
   "App.sectionFour.paragraph":
     "Find a job, claim it with no experience needed!",
+  "App.tip.sendTipButton": "Send Tip",
   "App.job.editProfileIcon": "Editing Profile",
   "App.job.notEditingProfileIcon": "Edit Profile",
   "App.profile.updateProfileButton": "Update Profile",
