added kreyol translations

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,34 +2,38 @@
   "App.core.description": "The Long-Term Jobs Market of Haiti",
   "App.nav.jobs": "Jobs",
   "App.nav.profile": "Profile",
-  "App.nav.wallet": "Wallet",
   "App.nav.signin": "Sign in",
   "App.nav.signout": "Sign out",
   "App.nav.createJob": "Post a Job",
-  "App.nav.kreyol": "kreyòl",
+  "App.nav.kreyol": "Kreyòl",
   "App.nav.french": "Francais",
   "App.nav.english": "Angle",
   "App.nav.home": "Home",
+  "App.helloMetaMask.installed": "Installed",
+  "App.helloMetaMask.network": "Network",
+  "App.helloMetaMask.account": "Account",
+  "App.helloMetaMask.balance": "Balance",
+  "App.helloMetaMask.unlockMetaMask": "Please Unlock MetaMask",
   "App.sectionOne.blockTitle": "Earn Stable Income",
   "App.sectionOne.blockHeader": "Same Day Jobs Marketplace",
-  "App.sectionOne.blockText":
-    "Travay provides a citizen driven, long-term jobs market, helping to provide to economic mobility.",
+  "App.sectionOne.blockText": "Travay provides a citizen driven, long-term jobs market, helping to provide to economic mobility.",
   "App.sectionTwo.blockTitle": "Receive Instant Payments",
   "App.sectionTwo.blockHeader": "Jobs Paid in Cryptocurrency",
-  "App.sectionTwo.blockText":
-    "Cryptocurrency Payment = Instant Access to Your Money.",
+  "App.sectionTwo.blockText": "Cryptocurrency Payment = Instant Access to Your Money.",
   "App.sectionFour.blockTitle": "How Does Travay Work?",
   "App.sectionFour.bullet1": "Register by signing in",
   "App.sectionFour.bullet2": "Find a job your want and click claim",
-  "App.sectionFour.bullet3":
-    "When work is complete, upload your proof of work and click complete job",
-  "App.sectionFour.bullet4":
-    "Your Job Manager will approve work and issue payment",
-  "App.sectionFour.paragraph":
-    "Find a job, claim it with no experience needed!",
+  "App.sectionFour.bullet3": "When work is complete, upload your proof of work and click complete job",
+  "App.sectionFour.bullet4": "Your Job Manager will approve work and issue payment",
+  "App.sectionFour.paragraph": "Find a job, claim it with no experience needed!",
+  "App.helloMetaMask.unsupportedNetwork": "This is an unsupported network. Please switch to the Main Network.",
   "App.tip.sendTipButton": "Send Tip",
+  "App.tip.tipSentTitle": "Success!",
+  "App.tip.tipSentText": "Your DAI transfer is complete!",
   "App.job.editProfileIcon": "Editing Profile",
   "App.job.notEditingProfileIcon": "Edit Profile",
+  "App.profile.updateProfileTitle": "Success!",
+  "App.profile.updateProfileText": "Your profile has been update!",
   "App.profile.updateProfileButton": "Update Profile",
   "App.profile.optInTexts": "I want to receive text messages when there are new jobs.",
   "App.profile.subscribeToMailingList": "I want to receive email messages when there are new jobs.",
@@ -42,12 +46,9 @@
   "App.job.jobDomain": "Domain",
   "App.job.jobSkill": "Skill",
   "App.job.salaryIsEditing": "Salary cannot be changed after job is posted.",
-  "App.job.payFrequencyIsEditing":
-    "Pay frequency cannot be changed after job is posted.",
-  "App.job.termOfEmploymentIsEditing":
-    "Term of Employment cannot be changed after job is posted.",
-  "App.job.requirementInstructions":
-    "Add one requirement, then click Add Requirement, to add additional requirements.",
+  "App.job.payFrequencyIsEditing": "Pay frequency cannot be changed after job is posted.",
+  "App.job.termOfEmploymentIsEditing": "Term of Employment cannot be changed after job is posted.",
+  "App.job.requirementInstructions": "Add one requirement, then click Add Requirement, to add additional requirements.",
   "App.job.addRequirement": "Add Requirement",
   "App.job.jobFullTimeRate": "Full-Time-Rate",
   "App.job.jobSponsoredAmount": "Sponsored Amount",
@@ -58,22 +59,17 @@
   "App.job.cancleJob": "Cancel Job",
   "App.job.datePosted": "Date Posted",
   "App.job.claimTitle": "Claim",
-  "App.job.claimDescription":
-    "A job is claimed when an individual has chosen to accept the work. A potential worker will see in this area any additional criteria and requirements before accepting the job.",
-  "App.job.sponsorDescription":
-    "Job sponsorship is where anyone in the world can donate and contribute to the workplace ecosystem. Choosing to sponsor ensures transparency in funds donated and incentives job workers to continue to perform and accept jobs.",
-  "App.job.claimDisclaimer":
-    "Claiming this position is to accept the job requirements and terms and conditions of Travay.",
+  "App.job.claimDescription": "A job is claimed when an individual has chosen to accept the work. A potential worker will see in this area any additional criteria and requirements before accepting the job.",
+  "App.job.sponsorDescription": "Job sponsorship is where anyone in the world can donate and contribute to the workplace ecosystem. Choosing to sponsor ensures transparency in funds donated and incentives job workers to continue to perform and accept jobs.",
+  "App.job.claimDisclaimer": "Claiming this position is to accept the job requirements and terms and conditions of Travay.",
   "App.job.sponsorJobButton": "Sponsor Job",
   "App.job.proofOfWorkTitle": "Proof of Work",
   "App.job.uploadProofOfWorkTitle": "Upload Proof of Work",
-  "App.job.proofOfWorkDescription":
-    "Based on the requirements of a job, the Job Manager may request proof that work was completed. For example, a picture of a planted tree or that trash was deposited in the correct location.",
-  "App.job.uploadFileButton": "Upload Images",
+  "App.job.proofOfWorkDescription": "Based on the requirements of a job, the Job Manager may request proof that work was completed. For example, a picture of a planted tree or that trash was deposited in the correct location.",
+  "App.job.uploadFileButton": "Save Uploaded Images",
   "App.job.uploadProofOfWorkButton": "what does thid do?",
   "App.job.approveWork": "Approve Work",
-  "App.job.approveWorkDescription":
-    "Approval history will be shown here. Once a job is approved, the job is marked complete and the worker receives their salary. This is not reversible.",
+  "App.job.approveWorkDescription": "Approval history will be shown here. Once a job is approved, the job is marked complete and the worker receives their salary. This is not reversible.",
   "App.job.payoutJobButton": "Payout Job",
   "App.job.jobCanceledNotificationTitle": "Success!",
   "App.job.jobCanceledNotificationText": "This job has been cancelled.",
@@ -82,11 +78,9 @@
   "App.job.jobEmptyFieldNotificationTitle": "Oops",
   "App.job.jobEmptyFieldNotificationText": "Please complete all fields.",
   "App.job.jobClaimedNotificationTitle": "Yay!",
-  "App.job.jobClaimedNotificationText":
-    "Job confirmed successfully! You can start work immediately.",
+  "App.job.jobClaimedNotificationText": "Job confirmed successfully! You can start work immediately.",
   "App.job.jobPayoutNotificationTitle": "Your worker thanks you!",
-  "App.job.jobPayoutNotificationTitleText":
-    "Payout Complete. Your account is being debited.",
+  "App.job.jobPayoutNotificationTitleText": "Payout Complete. Your account is being debited.",
   "App.job.jobUpdatedNotificationTitle": "Success!",
   "App.job.jobUpdatedNotificationText": "Job updated successfully",
   "App.job.jobPayout": "Payout Complete. Your account is being debited.",
@@ -94,23 +88,46 @@
   "App.job.uploadedPhotoProgress": "Upload is",
   "App.job.uploadedPhotoProgress2": "% done. Processing post.",
   "App.job.markJobComplete": "Job is Done",
-  "App.job.evaluateJobAsSuccess" : "Approve Work",
+  "App.job.evaluateJobAsSuccess": "Approve Work",
   "App.job.evaluateJobAsUnsuccessful": "Disapprove Work",
   "App.job.jobCompletedNotificationTitle": "Success",
-  "App.job.jobCompleteNotificationText":
-    "This job has been marked completed. Your Job Manager and Evaluator will review the work and send payment after confirming.",
+  "App.job.jobCompleteNotificationText": "This job has been marked completed. Your Job Manager and Evaluator will review the work and send payment after confirming.",
   "App.jobs.pageSubtitle": "Here you'll find 6-month and 12-month jobs.",
   "App.jobs.search": "Search",
   "App.jobs.filter": "Filter",
+  "App.createJob.jobPostedTitle": "Yay!",
+  "App.createJob.jobPostedText": "Your job is now posted! Click here to see the job.",
+  "App.createJob.emptyFieldsTitle": "Oops!",
+  "App.createJob.emptyFieldsText": "Please fill in all fields.",
   "App.createJob.termOfEmploymentExplanation": "Months of work is also referenced as milestones. The total amount you fund for this job will be divided by the number of milestones or total months of employment.",
   "App.createJob.acceptTerms": "I accept the Terms, Privacy Policy and Code of Conduct.",
   "App.createJob.submitPostAJob": "Submit Job Posting",
-  "App.createJob.salaryPayoutDisclaimer":
-    "Remember: (1) The salary you list above will be deducted and paid to the worker evenly based on the pay frequency (aka pay period) you've selected. (2) We collect 2% of the total salary amount. Based on the salary you have entered above the worker in total will receive approximately: ",
-  "App.createJob.pageDescription":
-    "Use the form below to create a 6-month or 12-month job.",
-  "App.createJob.requirementInstructions":
-    "Please add your requirements in order for the job to be considered as complete. Add one requirement, then click Add Requirement, to add additional requirements.",
+  "App.createJob.JobTitleInForm": "Job Title",
+  "App.createJob.requirementButton": "Add Requirement",
+  "App.createJob.salaryPayoutDisclaimer": "Remember: (1) The salary you list above will be deducted and paid to the worker evenly based on the pay frequency (aka pay period) you've selected. (2) We collect 2% of the total salary amount. Based on the salary you have entered above the worker in total will receive approximately: ",
+  "App.createJob.pageDescription": "Use the form below to create a 6-month or 12-month job.",
+  "App.createJob.requirementInstructions": "Please add your requirements in order for the job to be considered as complete. Add one requirement, then click Add Requirement, to add additional requirements.",
+  "App.footer.userGuide": "User Guide",
+  "App.footer.getStartedGuide": "Get Started",
+  "App.footer.codeOfConduct": "Code of Conduct",
+  "App.footer.company": "company",
+  "App.codeOfCode.pageTitle": "Code of Conduct",
+  "App.codeOfCode.paragraph1": "We as creators and maintainers of Travay pledge to making participation in our community a harassment-free experience for everyone, regardless of age, body size, disability, ethnicity, gender identity and expression, level of experience, nationality, personal appearance, race, religion, or sexual identity and orientation.",
+  "App.codeOfCode.mission": "Our Mission",
+  "App.codeOfCode.paragraph2": "Travay’s mission is to cultivate the talent of everyday citizens for creating a restored community and economic opportunity at scale. Our 3 core values are:",
+  "App.getStarted.title": "Quickly Get Started",
+  "App.getStarted.jobWorkersTitle": "Job Workers",
+  "App.getStarted.install": "Install",
+  "App.getStarted.browser": "browser",
+  "App.getStarted.step2": "Log into Travay with your Gmail Account. Don't have one? Sign up",
+  "App.getStarted.here": "here",
+  "App.getStarted.extension": "extension",
+  "App.getStarted.startJob": "Pick a job and start work immediately!",
+  "App.getStarted.jobPosters": "Job Posters",
+  "App.getStarted.fundMetaMask": "Fund your MetaMask account with DAI by clicking",
+  "App.getStarted.exchangeEtherToDAI": "to exchange Ether for DAI",
+  "App.getStarted.thingsToRememberTitle": "Things to Remember",
+  "App.getStarted.thingsToRememberText": "You have to use Firefox browser in order for MetaMask to work. MetaMask is your secure identity vault, providing a user interface to manage your identities on different sites and sign blockchain transactions. Remember to NEVER share or loose your password or seed phrase from Metamask.",
   "components.autocomplete.emptyMessage": "No options found for %s",
   "components.calendar.friday.short": "F",
   "components.calendar.monday.short": "M",
@@ -121,8 +138,7 @@
   "components.calendar.wednesday.short": "W",
   "components.dataTable.noResults": "No results found!",
   "components.formExample.zipCode.error": "Please enter a Number",
-  "components.markdown":
-    "### Markdown support\n - build on top of marked\n - server side rendering!!!\n - `github style` markdown",
+  "components.markdown": "### Markdown support\n - build on top of marked\n - server side rendering!!!\n - `github style` markdown",
   "components.pagination.next": "Next",
   "components.pagination.previous": "Previous",
   "components.register.cancellationText": "Cancel",
@@ -133,13 +149,11 @@
   "components.register.name.invalidText": "Please provide first and last name",
   "components.register.phone": "Phone",
   "components.register.phone.invalidText": "This is not a valid phone number!",
-  "components.register.submit.notification.text":
-    "We've sent an email to: {email}!",
+  "components.register.submit.notification.text": "We've sent an email to: {email}!",
   "components.register.submit.notification.title": "Hey {name}!",
   "components.register.submitText": "Submit",
   "components.register.subtitle": "Please fill in all required fields",
-  "components.register.terms":
-    "I accept the <a href=\"/\">Terms and Conditions</a>",
+  "components.register.terms": "I accept the <a href=\"/\">Terms and Conditions</a>",
   "components.register.title": "Register",
   "components.truncate.showLess": "Show less",
   "components.truncate.showMore": "Show more"
