--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -2,43 +2,53 @@
   "App.core.description": "Travay nan long tèm mache nan Ayiti",
   "App.nav.jobs": "Travay",
   "App.nav.profile": "Pwofil",
-  "App.nav.wallet": "Bous",
   "App.nav.signin": "Siyen Nan",
-  "App.nav.signout": "dekonekte",
+  "App.nav.signout": "Dekonekte",
   "App.nav.createJob": "Post yon Travay",
-  "App.nav.kreyol": "kreyòl",
+  "App.nav.kreyol": "Kreyòl",
   "App.nav.french": "Francais",
   "App.nav.english": "Angle",
   "App.nav.home": "Paj Lakay",
+  "App.helloMetaMask.installed": "Enstale",
+  "App.helloMetaMask.network": "Rezo",
+  "App.helloMetaMask.account": "Kont",
+  "App.helloMetaMask.balance": "Balans",
+  "App.helloMetaMask.unlockMetaMask": "Tanpri déblotché MetaMask",
   "App.sectionOne.blockTitle": "Fè lajan ki estab",
   "App.sectionOne.blockHeader": "Menm jou Travay Marketplace la",
-  "App.sectionOne.blockText":
-    "Travay bay yon sitwayen kondwi, alontèm djòb mache, ede bay mobilite ekonomik.",
+  "App.sectionOne.blockText": "Travay bay yon sitwayen kondwi, alontèm djòb mache, ede bay mobilite ekonomik.",
   "App.sectionTwo.blockTitle": "Resevwa Peman Instant",
   "App.sectionTwo.blockHeader": "Travay peye nan Cryptocurrency",
   "App.sectionTwo.blockText": "Cryptocurrency Peman = instant aksè a lajan ou",
   "App.sectionFour.blockTitle": "Kijan Travay, Travay?",
   "App.sectionFour.bullet1": "Enskri pa siyen nan",
-  "App.sectionFour.bullet2":
-    "Jwenn yon travay ou vle epi klike sou reklamasyon",
-  "App.sectionFour.bullet3":
-    "Lè travay la konplete, Upload prèv ou nan travay epi klike sou travay konplè",
-  "App.sectionFour.bullet4":
-    "Manadjè travay ou ap apwouve travay ak peman pwoblèm",
-  "App.sectionFour.paragraph":
-    "Jwenn yon travay, reklame li ki pa gen okenn eksperyans ki nesesè!",
+  "App.sectionFour.bullet2": "Jwenn yon travay ou vle epi klike sou reklamasyon",
+  "App.sectionFour.bullet3": "Lè travay la konplete, Upload prèv ou nan travay epi klike sou travay konplè",
+  "App.sectionFour.bullet4": "Manadjè travay ou ap apwouve travay ak peman pwoblèm",
+  "App.sectionFour.paragraph": "Jwenn yon travay, reklame li ki pa gen okenn eksperyans ki nesesè!",
+  "App.helloMetaMask.unsupportedNetwork": "Sa a se yon rezo sipòte. Tanpri chanje nan Rezo a Main (Main Network).",
+  "App.tip.sendTipButton": "Voye tip",
+  "App.tip.tipSentTitle": "Siksè!",
+  "App.tip.tipSentText": "Transfè DAI ou konplè!",
+  "App.job.editProfileIcon": "Korije Pwofil",
+  "App.job.notEditingProfileIcon": "Korije Pwofil",
+  "App.profile.updateProfileTitle": "Siksè!",
+  "App.profile.updateProfileText": "Pwofil ou te aktyalizasyon!",
+  "App.profile.updateProfileButton": "Mete ajou Profile",
+  "App.profile.optInTexts": "Mwen vle resevwa mesaj tèks lè gen nouvo djòb.",
+  "App.profile.subscribeToMailingList": "Mwen vle resevwa mesaj imel lè gen nouvo djòb.",
+  "App.profile.updateProfile": "Mete ajou mobil nimewo.",
+  "App.job.claim": "Reklamasyon",
+  "App.job.claimPayout": "Reklamasyon Peye",
   "App.job.editJobIcon": "Modifye",
   "App.job.pageHeader": "Travay",
   "App.job.jobDescription": "Deskripsyon",
   "App.job.jobDomain": "Domèn",
   "App.job.jobSkill": "Konpetans",
   "App.job.salaryIsEditing": "Salè pa ka chanje apre travay la afiche.",
-  "App.job.payFrequencyIsEditing":
-    "Peye frekans pa ka chanje apre travay la afiche.",
-  "App.job.termOfEmploymentIsEditing":
-    "Peryòd travay la pa ka chanje apre travay la afiche.",
-  "App.job.requirementInstructions":
-    "Ajoute yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
+  "App.job.payFrequencyIsEditing": "Peye frekans pa ka chanje apre travay la afiche.",
+  "App.job.termOfEmploymentIsEditing": "Peryòd travay la pa ka chanje apre travay la afiche.",
+  "App.job.requirementInstructions": "Ajoute yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
   "App.job.addRequirement": "Ajoute Kondisyon",
   "App.job.jobFullTimeRate": "Full-Time-Rate",
   "App.job.jobSponsoredAmount": "Patwone kantite lajan an",
@@ -49,21 +59,17 @@
   "App.job.cancleJob": "Anile Travay",
   "App.job.datePosted": "Dat li te ye",
   "App.job.claimTitle": "Reklamasyon",
-  "App.job.claimDescription":
-    "Yon travay te reklame lè yon moun te chwazi yo aksepte travay la. Yon travayè potansyèl pral wè nan zòn sa a nenpòt lòt kritè ak kondisyon anvan yo aksepte travay la.",
-  "App.job.sponsorDescription":
-    "Travay parennaj se kote nenpòt moun nan mond lan ka bay ak kontribye nan ekosistèm travay la. Chwazi pou patwone asire transparans nan lajan ki bay ak ankourajman travayè travay pou kontinye fè ak aksepte travay.",
-  "App.job.claimDisclaimer":
-    "Reklamasyon pozisyon sa a se aksepte kondisyon travay yo ak tèm ak kondisyon nan travay.",
+  "App.job.claimDescription": "Yon travay te reklame lè yon moun te chwazi yo aksepte travay la. Yon travayè potansyèl pral wè nan zòn sa a nenpòt lòt kritè ak kondisyon anvan yo aksepte travay la.",
+  "App.job.sponsorDescription": "Travay parennaj se kote nenpòt moun nan mond lan ka bay ak kontribye nan ekosistèm travay la. Chwazi pou patwone asire transparans nan lajan ki bay ak ankourajman travayè travay pou kontinye fè ak aksepte travay.",
+  "App.job.claimDisclaimer": "Reklamasyon pozisyon sa a se aksepte kondisyon travay yo ak tèm ak kondisyon nan travay.",
   "App.job.sponsorJobButton": "Sponsor yon Travay",
   "App.job.proofOfWorkTitle": "Prèv Travay",
-  "App.job.proofOfWorkDescription":
-    "Ki baze sou egzijans yon djòb, Manadjè Job la ka mande prèv ke travay te fini. Pa egzanp, gen yon foto yon pyebwa plante oswa ki fatra depoze nan kote kòrèk la.",
   "App.job.uploadProofOfWorkTitle": "Voye prèv travay",
+  "App.job.proofOfWorkDescription": "Ki baze sou egzijans yon djòb, Manadjè Job la ka mande prèv ke travay te fini. Pa egzanp, gen yon foto yon pyebwa plante oswa ki fatra depoze nan kote kòrèk la.",
   "App.job.uploadFileButton": "Soumèt Prèv",
+  "App.job.uploadProofOfWorkButton": "what does this do?",
   "App.job.approveWork": "Apwouve travay",
-  "App.job.approveWorkDescription":
-    "Apwobasyon istwa yo pral montre isit la. Yon fwa ke yon travay apwouve, travay la make konplè epi travayè a resevwa salè yo. Sa a se pa revèsib.",
+  "App.job.approveWorkDescription": "Apwobasyon istwa yo pral montre isit la. Yon fwa ke yon travay apwouve, travay la make konplè epi travayè a resevwa salè yo. Sa a se pa revèsib.",
   "App.job.payoutJobButton": "Peye Travay",
   "App.job.jobCanceledNotificationTitle": "Siksè!",
   "App.job.jobCanceledNotificationText": "Travay sa a te anile.",
@@ -72,11 +78,9 @@
   "App.job.jobEmptyFieldNotificationTitle": "Oops",
   "App.job.jobEmptyFieldNotificationText": "Tanpri ranpli tout jaden.",
   "App.job.jobClaimedNotificationTitle": "Yay!",
-  "App.job.jobClaimedNotificationText":
-    "Travay konfime avèk siksè! Ou ka kòmanse travay imedyatman.",
+  "App.job.jobClaimedNotificationText": "Travay konfime avèk siksè! Ou ka kòmanse travay imedyatman.",
   "App.job.jobPayoutNotificationTitle": "Travayè ou gras ou!",
-  "App.job.jobPayoutNotificationTitleText":
-    "Peye Ranpli. Se kont ou ke yo te debite.",
+  "App.job.jobPayoutNotificationTitleText": "Peye Ranpli. Se kont ou ke yo te debite.",
   "App.job.jobUpdatedNotificationTitle": "Siksè!",
   "App.job.jobUpdatedNotificationText": "Travay mete ajou avèk siksè!",
   "App.job.jobPayout": "Peye Ranpli. Se kont ou ke yo te debite.",
@@ -84,18 +88,47 @@
   "App.job.uploadedPhotoProgress": "Voye se",
   "App.job.uploadedPhotoProgress2": "% fè. Post Processing.",
   "App.job.markJobComplete": "Jòb se fè",
+  "App.job.evaluateJobAsSuccess": "Apwouve Travo",
+  "App.job.evaluateJobAsUnsuccessful": "Dezapwouve Travay",
   "App.job.jobCompletedNotificationTitle": "Siksè",
-  "App.job.jobCompleteNotificationText":
-    "Travay sa a te make konplete. Manadjè travay ou a pral revize travay la epi voye peman apre konfime.",
+  "App.job.jobCompleteNotificationText": "Travay sa a te make konplete. Manadjè travay ou a pral revize travay la epi voye peman apre konfime.",
   "App.jobs.pageSubtitle": "Men w ap jwenn travay 6 mwa ak 12 mwa.",
   "App.jobs.search": "Rechèch",
   "App.jobs.filter": "Filtre",
-  "App.createJob.salaryPayoutDisclaimer":
-    "Sonje: (1) Yo pral dedwi salè ou anwo a epi yo te fè travayè a respektif ki baze sou frekans peye (aka peryòd peye) ou te chwazi a. (2) Nou kolekte 2% kantite lajan total salè. Ki baze sou salè ou te antre anwo a travayè total la ap resevwa apeprè: ",
-  "App.createJob.pageDescription":
-    "Itilize fòm ki anba a pou kreye yon travay 6 mwa oswa 12 mwa.",
-  "App.createJob.requirementInstructions":
-    "Tanpri ajoute kondisyon ou yo nan lòd pou travay la yo dwe konsidere kòm konplè. Add yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
+  "App.createJob.jobPostedTitle": "Yay!",
+  "App.createJob.jobPostedText": "Se travay ou kounye a afiche! Klike la a pou wè travay la.",
+  "App.createJob.emptyFieldsTitle": "Oops!",
+  "App.createJob.emptyFieldsText": "Tanpri ranpli tout jaden.",
+  "App.createJob.termOfEmploymentExplanation": "Mwa nan travay tou se referans kòm jalons. Kantite total ou finanse pou travay sa a pral divize pa kantite jalons oswa mwa total travay.",
+  "App.createJob.acceptTerms": "Mwen aksepte Tèm yo, Règleman sou enfòmasyon prive ak Kòd konduit.",
+  "App.createJob.submitPostAJob": "Soumèt",
+  "App.createJob.JobTitleInForm": "Tit travay",
+  "App.createJob.requirementButton": "Ajoute yon bezwen",
+  "App.createJob.salaryPayoutDisclaimer": "Sonje: (1) Yo pral dedwi salè ou anwo a epi yo te fè travayè a respektif ki baze sou frekans peye (aka peryòd peye) ou te chwazi a. (2) Nou kolekte 2% kantite lajan total salè. Ki baze sou salè ou te antre anwo a travayè total la ap resevwa apeprè: ",
+  "App.createJob.pageDescription": "Itilize fòm ki anba a pou kreye yon travay 6 mwa oswa 12 mwa.",
+  "App.createJob.requirementInstructions": "Tanpri ajoute kondisyon ou yo nan lòd pou travay la yo dwe konsidere kòm konplè. Add yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
+  "App.footer.userGuide": "Gid Itilizatè",
+  "App.footer.getStartedGuide": "Jwenn kòmanse",
+  "App.footer.codeOfConduct": "Kòd Konduit",
+  "App.footer.company": "konpayi",
+  "App.codeOfCode.pageTitle": "Kòd Konduit",
+  "App.codeOfCode.paragraph1": "Nou kòm kreyatè ak antretyen nan Travay angajman pou fè patisipasyon nan kominote nou an yon eksperyans pèsekisyon pou tout moun, kèlkeswa laj, gwosè kò, enfimite, etnisite, idantite seksyèl ak ekspresyon, nivo eksperyans, nasyonalite, aparans pèsonèl, ras, relijyon , oswa idantite seksyèl ak oryantasyon.",
+  "App.codeOfCode.mission": "Misyon nou",
+  "App.codeOfCode.paragraph2": "Misyon Travay la se kiltive talan nan sitwayen chak jou pou kreye yon kominote restore ak opòtinite ekonomik nan echèl la. Nou 3 valè debaz yo se:",
+  "App.getStarted.title": "Byen vit kòmanse",
+  "App.getStarted.jobWorkersTitle": "Travayè",
+  "App.getStarted.install": "Enstale",
+  "App.getStarted.browser": "navigatè",
+  "App.getStarted.step2": "Ouvri sesyon an nan travay ak kont Gmail ou. Pa gen yon sèl? Enskri",
+  "App.getStarted.here": "isit la",
+  "App.getStarted.extension": "ekstansyon",
+  "App.getStarted.startJob": "Chwazi yon travay epi yo kòmanse travay imedyatman!",
+  "App.getStarted.jobPosters": "Administratè yo",
+  "App.getStarted.fundMetaMask": "Fon kont MetaMask ou a ak DAI pa klike",
+  "App.getStarted.exchangeEtherToDAI": "pou echanj etè pou DAI",
+  "App.getStarted.thingsToRememberTitle": "Bagay sa yo sonje",
+  "App.getStarted.thingsToRememberText": "Ou gen yo sèvi ak Firefox navigatè yo nan lòd pou MetaMask nan travay. MetaMask se vout sekirite idantite ou, bay yon koòdone itilizatè nan jere idantite ou sou sit diferan ak tranzaksyon siy blòkchan. Sonje pou pa janm pataje oswa lage modpas ou oswa fraz pitit pitit soti nan Metamask.",
+  "components.autocomplete.emptyMessage": "Pa gen opsyon yo te jwenn pou %s",
   "components.calendar.friday.short": "F",
   "components.calendar.monday.short": "M",
   "components.calendar.saturday.short": "S",
@@ -105,27 +138,22 @@
   "components.calendar.wednesday.short": "W",
   "components.dataTable.noResults": "Pa gen rezilta yo te jwenn!",
   "components.formExample.zipCode.error": "Tanpri antre yon Nimewo",
-  "components.markdown":
-    "### Markdown support\n - build on top of marked\n - server side rendering!!!\n - `github style` markdown",
+  "components.markdown": "### Markdown support\n - build on top of marked\n - server side rendering!!!\n - `github style` markdown",
   "components.pagination.next": "Apre sa",
   "components.pagination.previous": "Previous",
   "components.register.cancellationText": "Anile",
   "components.register.consent": "Mwen konsanti pou w kontakte",
   "components.register.email": "Imèl",
-  "components.register.email.invalidText":
-    "Sa a se pa yon adrès imel ki valab!",
+  "components.register.email.invalidText": "Sa a se pa yon adrès imel ki valab!",
   "components.register.name": "Name",
   "components.register.name.invalidText": "Please provide first and last name",
   "components.register.phone": "Telefòn",
-  "components.register.phone.invalidText":
-    "Sa a se pa yon nimewo telefòn ki valab!",
-  "components.register.submit.notification.text":
-    "Nou te voye yon imèl bay: {email}!",
+  "components.register.phone.invalidText": "Sa a se pa yon nimewo telefòn ki valab!",
+  "components.register.submit.notification.text": "Nou te voye yon imèl bay: {email}!",
   "components.register.submit.notification.title": "Hey {name}!",
   "components.register.submitText": "Soumèt",
   "components.register.subtitle": "Tanpri ranpli tout jaden obligatwa yo",
-  "components.register.terms":
-    "I accept the <a href=\"/\">Terms and Conditions</a>",
+  "components.register.terms": "I accept the <a href=\"/\">Terms and Conditions</a>",
   "components.register.title": "Enskri",
   "components.truncate.showLess": "Montre mwens",
   "components.truncate.showMore": "Montre plis"
