added kreyol translations

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -14,6 +14,20 @@
   "App.helloMetaMask.account": "Account",
   "App.helloMetaMask.balance": "Balance",
   "App.helloMetaMask.unlockMetaMask": "Please Unlock MetaMask",
+  "App.home.earn": "Earn Stable Income",
+  "App.home.sameDayJobs": "Same Day Jobs Marketplace",
+  "App.home.sameDayJobsDescription": "Travay provides a citizen driven, long-term jobs market, helping to provide to economic mobility.",
+  "App.home.receivePayments": "Receive Instant Payments",
+  "App.home.jobsPaidInCrypto": "Jobs Paid in Cryptocurrency",
+  "App.home.crypto": "Cryptocurrency Payment = Instant Access to Your Money.",
+  "App.home.howDoesItWork": "How Does It Work?",
+  "App.home.register": "Register by signing in",
+  "App.home.findAndClaim": "Find a job your want and click claim",
+  "App.home.whenCompleteInstructions": "When work is complete, upload your proof of work and click complete job",
+  "App.home.mangerApproves": "Your Job Manager will approve work and issue payment",
+  "App.home.getStartedFast": "How to Get Started Fast",
+  "App.home.noExperienceNeed": "Find a job, claim it with no experience needed!",
+  "App.home.visitWebsite": "Visit this website in the",
   "App.sectionOne.blockTitle": "Earn Stable Income",
   "App.sectionOne.blockHeader": "Same Day Jobs Marketplace",
   "App.sectionOne.blockText": "Travay provides a citizen driven, long-term jobs market, helping to provide to economic mobility.",
