--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -14,6 +14,20 @@
   "App.helloMetaMask.account": "Kont",
   "App.helloMetaMask.balance": "Balans",
   "App.helloMetaMask.unlockMetaMask": "Tanpri déblotché MetaMask",
+  "App.home.earn": "Fè lajan ki estab",
+  "App.home.sameDayJobs": "Travay menm jou",
+  "App.home.sameDayJobsDescription": "Travay bay yon sitwayen kondwi, alontèm djòb mache, ede bay mobilite ekonomik.",
+  "App.home.receivePayments": "Resevwa Peman Instant",
+  "App.home.jobsPaidInCrypto": "Travay peye nan Cryptocurrency",
+  "App.home.crypto": "Cryptocurrency Peman = instant aksè a lajan ou.",
+  "App.home.howDoesItWork": "Kijan li travay?",
+  "App.home.register": "Enskri pa siyen nan",
+  "App.home.findAndClaim": "Jwenn yon travay ou vle epi klike sou reklamasyon",
+  "App.home.whenCompleteInstructions": "Lè travay la konplete, Upload prèv ou nan travay epi klike sou travay konplè",
+  "App.home.mangerApproves": "Manadjè travay ou ap apwouve travay ak peman pwoblèm",
+  "App.home.getStartedFast": "Ki jan yo kòmanse te kòmanse vit",
+  "App.home.noExperienceNeed": "Jwenn yon travay, reklame li ki pa gen okenn eksperyans ki nesesè!",
+  "App.home.visitWebsite": "Vizite sit entènèt sa a nan la",
   "App.sectionOne.blockTitle": "Fè lajan ki estab",
   "App.sectionOne.blockHeader": "Menm jou Travay Marketplace la",
   "App.sectionOne.blockText": "Travay bay yon sitwayen kondwi, alontèm djòb mache, ede bay mobilite ekonomik.",
