added translations for jobs, navbar, profile, tip, footer and sign in modal

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,10 +5,14 @@
   "App.nav.signin": "Sign in",
   "App.nav.signout": "Sign out",
   "App.nav.createJob": "Post a Job",
+  "App.nav.tip": "Tip",
   "App.nav.kreyol": "Kreyòl",
   "App.nav.french": "Francais",
   "App.nav.english": "Angle",
   "App.nav.home": "Home",
+  "App.signInModal.googleSignIn": "Sign In with Google",
+  "App.signInModal.signOutWarning": "Remember to also sign out of MetaMask, to prevent phishing. Learn more about phishing here: https://fr.wikipedia.org/wiki/Hame%C3%A7onnage.",
+  "App.signInModal.googleSignOut": "Sign Out with Google",
   "App.helloMetaMask.installed": "Installed",
   "App.helloMetaMask.network": "Network",
   "App.helloMetaMask.account": "Account",
@@ -44,6 +48,10 @@
   "App.tip.sendTipButton": "Send Tip",
   "App.tip.tipSentTitle": "Success!",
   "App.tip.tipSentText": "Your DAI transfer is complete!",
+  "App.tip.tipPageTitle": "Tip Anyone!",
+  "App.tip.tipPageDescription": "Send cryptocurrency (DAI) to anyone. For a job well done, for a service, for rent, food and more. Remember that $1 DAI is equal to $1",
+  "App.tip.receiverDescription": "Paste in the ethereum address of the person who should receive your DAI.",
+  "App.tip.amountDescription": "Enter how much you would like to send in USD.",
   "App.job.editProfileIcon": "Editing Profile",
   "App.job.notEditingProfileIcon": "Edit Profile",
   "App.profile.updateProfileTitle": "Success!",
@@ -52,8 +60,16 @@
   "App.profile.optInTexts": "I want to receive text messages when there are new jobs.",
   "App.profile.subscribeToMailingList": "I want to receive email messages when there are new jobs.",
   "App.profile.updateProfile": "Update mobile number.",
+  "App.profile.incompleteJobs": "List of all jobs that are still open.",
+  "App.profile.completedJobs": "List of all jobs that have all been completed and closed.",
+  "App.profile.canceledJobs": "List of all jobs that have all been canceled.",
+  "App.profile.managingJobs": "List of all jobs you are managing.",
+  "App.profile.evaluatingJobs": "List of all jobs you are listed as the Evaluator.",
+  "App.profile.sponsoringJobs": "List of all jobs you've sponsored.",
   "App.job.claim": "Claim",
   "App.job.claimPayout": "Claim Payout",
+  "App.jobs.learnMoreButton": "LEARN MORE",
+  "App.jobs.postAJobButton": "Post a Job",
   "App.job.editJobIcon": "Edit",
   "App.job.pageHeader": "Job",
   "App.job.jobDescription": "Description",
@@ -124,7 +140,7 @@
   "App.footer.userGuide": "User Guide",
   "App.footer.getStartedGuide": "Get Started",
   "App.footer.codeOfConduct": "Code of Conduct",
-  "App.footer.company": "company",
+  "App.footer.company": "Travay an Electric Feel company",
   "App.codeOfCode.pageTitle": "Code of Conduct",
   "App.codeOfCode.paragraph1": "We as creators and maintainers of Travay pledge to making participation in our community a harassment-free experience for everyone, regardless of age, body size, disability, ethnicity, gender identity and expression, level of experience, nationality, personal appearance, race, religion, or sexual identity and orientation.",
   "App.codeOfCode.mission": "Our Mission",
