--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -5,10 +5,14 @@
   "App.nav.signin": "Siyen Nan",
   "App.nav.signout": "Dekonekte",
   "App.nav.createJob": "Post yon Travay",
+  "App.nav.tip": "Pwent",
   "App.nav.kreyol": "Kreyòl",
   "App.nav.french": "Francais",
   "App.nav.english": "Angle",
   "App.nav.home": "Paj Lakay",
+  "App.signInModal.googleSignIn": "Siyen nan ak Google",
+  "App.signInModal.signOutWarning": "Sonje tou siyen soti nan MetaMask, yo anpeche èskrokri. Aprann plis bagay sou èskrokri isit la: https://fr.wikipedia.org/wiki/Hame%C3%A7onnage.",
+  "App.signInModal.googleSignOut": "Siyen soti ak Google",
   "App.helloMetaMask.installed": "Enstale",
   "App.helloMetaMask.network": "Rezo",
   "App.helloMetaMask.account": "Kont",
@@ -45,6 +49,10 @@
   "App.tip.tipSentTitle": "Siksè!",
   "App.tip.tipSentText": "Transfè DAI ou konplè!",
   "App.job.editProfileIcon": "Korije Pwofil",
+  "App.tip.tipPageTitle": "Ide Nenpòt moun!",
+  "App.tip.tipPageDescription": "Voye cryptocurrency (DAI) pou nenpòt moun. Pou yon travay byen fè, pou yon sèvis, pou lwaye, manje ak plis ankò. Sonje ke DAI $ 1 egal a $ 1",
+  "App.tip.receiverDescription": "Paste nan adrès ethereum moun ki ta dwe resevwa DAI ou.",
+  "App.tip.amountDescription": "Antre nan konbyen lajan ou ta renmen voye nan USD.",
   "App.job.notEditingProfileIcon": "Korije Pwofil",
   "App.profile.updateProfileTitle": "Siksè!",
   "App.profile.updateProfileText": "Pwofil ou te aktyalizasyon!",
@@ -52,8 +60,16 @@
   "App.profile.optInTexts": "Mwen vle resevwa mesaj tèks lè gen nouvo djòb.",
   "App.profile.subscribeToMailingList": "Mwen vle resevwa mesaj imel lè gen nouvo djòb.",
   "App.profile.updateProfile": "Mete ajou mobil nimewo.",
+  "App.profile.incompleteJobs": "Lis tout travay ki toujou louvri.",
+  "App.profile.completedJobs": "Lis tout travay ki te konplete epi yo fèmen.",
+  "App.profile.canceledJobs": "Lis tout travay ki te anile tout.",
+  "App.profile.managingJobs": "Lis tout djòb w ap jere.",
+  "App.profile.evaluatingJobs": "Lis tout travay ou yo ki nan lis kòm evalyatè a.",
+  "App.profile.sponsoringJobs": "Lis tout travay ou te patwone.",
   "App.job.claim": "Reklamasyon",
   "App.job.claimPayout": "Reklamasyon Peye",
+  "App.jobs.learnMoreButton": "APRANN PLIS",
+  "App.jobs.postAJobButton": "Post yon travay",
   "App.job.editJobIcon": "Modifye",
   "App.job.pageHeader": "Travay",
   "App.job.jobDescription": "Deskripsyon",
@@ -124,7 +140,7 @@
   "App.footer.userGuide": "Gid Itilizatè",
   "App.footer.getStartedGuide": "Jwenn kòmanse",
   "App.footer.codeOfConduct": "Kòd Konduit",
-  "App.footer.company": "konpayi",
+  "App.footer.company": "Travay yon Electric Feel konpayi",
   "App.codeOfCode.pageTitle": "Kòd Konduit",
   "App.codeOfCode.paragraph1": "Nou kòm kreyatè ak antretyen nan Travay angajman pou fè patisipasyon nan kominote nou an yon eksperyans pèsekisyon pou tout moun, kèlkeswa laj, gwosè kò, enfimite, etnisite, idantite seksyèl ak ekspresyon, nivo eksperyans, nasyonalite, aparans pèsonèl, ras, relijyon , oswa idantite seksyèl ak oryantasyon.",
   "App.codeOfCode.mission": "Misyon nou",
