--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -148,7 +148,7 @@
   "App.getStarted.title": "Byen vit kòmanse",
   "App.getStarted.jobWorkersTitle": "Travayè",
   "App.getStarted.install": "Enstale",
-  "App.getStarted.browser": "navigatè",
+  "App.getStarted.browser": "navigatè (si sou telefòn mobil).",
   "App.getStarted.step2": "Ouvri sesyon an nan travay ak kont Gmail ou. Pa gen yon sèl? Enskri",
   "App.getStarted.here": "isit la",
   "App.getStarted.extension": "ekstansyon",
