updated language translations and fixed user role logic for on claim

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -51,7 +51,7 @@
   "App.job.editProfileIcon": "Korije Pwofil",
   "App.tip.tipPageTitle": "Ide Nenpòt moun!",
   "App.tip.tipPageDescription": "Voye cryptocurrency (DAI) pou nenpòt moun. Pou yon travay byen fè, pou yon sèvis, pou lwaye, manje ak plis ankò. Sonje ke DAI $ 1 egal a $ 1",
-  "App.tip.receiverDescription": "Paste nan adrès ethereum moun ki ta dwe resevwa DAI ou.",
+  "App.tip.receiverDescription": "Paste nan adrès ethereum moun ki ta dwe resevwa DAI ou. Sonje sa a se irevokabl konsa asire w ke ou gen adrès ki dwat!",
   "App.tip.amountDescription": "Antre nan konbyen lajan ou ta renmen voye nan USD.",
   "App.job.notEditingProfileIcon": "Korije Pwofil",
   "App.profile.updateProfileTitle": "Siksè!",
@@ -89,13 +89,13 @@
   "App.job.cancleJob": "Anile Travay",
   "App.job.datePosted": "Dat li te ye",
   "App.job.claimTitle": "Reklamasyon",
-  "App.job.claimDescription": "Yon travay te reklame lè yon moun te chwazi yo aksepte travay la. Yon travayè potansyèl pral wè nan zòn sa a nenpòt lòt kritè ak kondisyon anvan yo aksepte travay la.",
+  "App.job.claimDescription": "Reklamasyon yon travay se tou senpleman kòm klike sou Reklamasyon bouton an. Bouton an pral sèlman vizib si travay la pa te reklame pa nenpòt moun ak yon moun ki louvri sesyon an.",
   "App.job.sponsorDescription": "Travay parennaj se kote nenpòt moun nan mond lan ka bay ak kontribye nan ekosistèm travay la. Chwazi pou patwone asire transparans nan lajan ki bay ak ankourajman travayè travay pou kontinye fè ak aksepte travay.",
-  "App.job.claimDisclaimer": "Reklamasyon pozisyon sa a se aksepte kondisyon travay yo ak tèm ak kondisyon nan travay.",
+  "App.job.claimDisclaimer": "Reklamasyon sa a se aksepte kondisyon travay yo, ak tèm ak kondisyon, ak kòd kondwit nan Travay.",
   "App.job.sponsorJobButton": "Sponsor yon Travay",
   "App.job.proofOfWorkTitle": "Prèv Travay",
   "App.job.uploadProofOfWorkTitle": "Voye prèv travay",
-  "App.job.proofOfWorkDescription": "Ki baze sou egzijans yon djòb, Manadjè Job la ka mande prèv ke travay te fini. Pa egzanp, gen yon foto yon pyebwa plante oswa ki fatra depoze nan kote kòrèk la.",
+  "App.job.proofOfWorkDescription": "Ki baze sou egzijans yon djòb, Manadjè Job la ka mande prèv ke travay la te fini. Pou egzanp, yon foto nan yon pye bwa plante. Si travayè a bay prèv li pral montre anba a.",
   "App.job.uploadFileButton": "Soumèt Prèv",
   "App.job.uploadProofOfWorkButton": "what does this do?",
   "App.job.approveWork": "Apwouve travay",
@@ -134,13 +134,13 @@
   "App.createJob.submitPostAJob": "Soumèt",
   "App.createJob.JobTitleInForm": "Tit travay",
   "App.createJob.requirementButton": "Ajoute yon bezwen",
-  "App.createJob.salaryPayoutDisclaimer": "Sonje: (1) Yo pral dedwi salè ou anwo a epi yo te fè travayè a respektif ki baze sou frekans peye (aka peryòd peye) ou te chwazi a. (2) Nou kolekte 2% kantite lajan total salè. Ki baze sou salè ou te antre anwo a travayè total la ap resevwa apeprè: ",
+  "App.createJob.salaryPayoutDisclaimer": "Sonje: (1) Salè ou lis anwo a ap fèt dedui ak peye travayè a respire ki baze sou mwa yo total ou te tape pi wo a. (2) Nou kolekte 2% kantite lajan total salè. Ki baze sou salè ou te antre anlè travayè a nan total pral resevwa apeprè: ",
   "App.createJob.pageDescription": "Itilize fòm ki anba a pou kreye yon travay 6 mwa oswa 12 mwa.",
   "App.createJob.requirementInstructions": "Tanpri ajoute kondisyon ou yo nan lòd pou travay la yo dwe konsidere kòm konplè. Add yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
   "App.footer.userGuide": "Gid Itilizatè",
   "App.footer.getStartedGuide": "Jwenn kòmanse",
   "App.footer.codeOfConduct": "Kòd Konduit",
-  "App.footer.company": "Travay yon Electric Feel konpayi",
+  "App.footer.company": "Travay",
   "App.codeOfCode.pageTitle": "Kòd Konduit",
   "App.codeOfCode.paragraph1": "Nou kòm kreyatè ak antretyen nan Travay angajman pou fè patisipasyon nan kominote nou an yon eksperyans pèsekisyon pou tout moun, kèlkeswa laj, gwosè kò, enfimite, etnisite, idantite seksyèl ak ekspresyon, nivo eksperyans, nasyonalite, aparans pèsonèl, ras, relijyon , oswa idantite seksyèl ak oryantasyon.",
   "App.codeOfCode.mission": "Misyon nou",
