--- a/i18n/en.json
+++ b/i18n/en.json
@@ -50,7 +50,7 @@
   "App.tip.tipSentText": "Your DAI transfer is complete!",
   "App.tip.tipPageTitle": "Tip Anyone!",
   "App.tip.tipPageDescription": "Send cryptocurrency (DAI) to anyone. For a job well done, for a service, for rent, food and more. Remember that $1 DAI is equal to $1",
-  "App.tip.receiverDescription": "Paste in the ethereum address of the person who should receive your DAI.",
+  "App.tip.receiverDescription": "Paste in the ethereum address of the person who should receive your DAI. Remember this is irreversible so make sure you have the right address!",
   "App.tip.amountDescription": "Enter how much you would like to send in USD.",
   "App.job.editProfileIcon": "Editing Profile",
   "App.job.notEditingProfileIcon": "Edit Profile",
@@ -89,13 +89,13 @@
   "App.job.cancleJob": "Cancel Job",
   "App.job.datePosted": "Date Posted",
   "App.job.claimTitle": "Claim",
-  "App.job.claimDescription": "A job is claimed when an individual has chosen to accept the work. A potential worker will see in this area any additional criteria and requirements before accepting the job.",
+  "App.job.claimDescription": "Claiming a job is as simply as clicking the button Claim. The button will only be visible if the job is not claimed by anyone and an individual is logged in.",
   "App.job.sponsorDescription": "Job sponsorship is where anyone in the world can donate and contribute to the workplace ecosystem. Choosing to sponsor ensures transparency in funds donated and incentives job workers to continue to perform and accept jobs.",
-  "App.job.claimDisclaimer": "Claiming this position is to accept the job requirements and terms and conditions of Travay.",
+  "App.job.claimDisclaimer": "Claiming this position is to accept the job requirements, and terms and conditions, and code of conduct of Travay.",
   "App.job.sponsorJobButton": "Sponsor Job",
   "App.job.proofOfWorkTitle": "Proof of Work",
   "App.job.uploadProofOfWorkTitle": "Upload Proof of Work",
-  "App.job.proofOfWorkDescription": "Based on the requirements of a job, the Job Manager may request proof that work was completed. For example, a picture of a planted tree or that trash was deposited in the correct location.",
+  "App.job.proofOfWorkDescription": "Based on the requirements of a job, the Job Manager may request proof that work was completed. For example, a picture of a planted tree. If the worker has provided proof it will be shown below.",
   "App.job.uploadFileButton": "Save Uploaded Images",
   "App.job.uploadProofOfWorkButton": "what does thid do?",
   "App.job.approveWork": "Approve Work",
@@ -134,13 +134,13 @@
   "App.createJob.submitPostAJob": "Submit Job Posting",
   "App.createJob.JobTitleInForm": "Job Title",
   "App.createJob.requirementButton": "Add Requirement",
-  "App.createJob.salaryPayoutDisclaimer": "Remember: (1) The salary you list above will be deducted and paid to the worker evenly based on the pay frequency (aka pay period) you've selected. (2) We collect 2% of the total salary amount. Based on the salary you have entered above the worker in total will receive approximately: ",
+  "App.createJob.salaryPayoutDisclaimer": "Remember: (1) The salary you list above will be deducted and paid to the worker evenly based on the total months you have typed above. (2) We collect 2% of the total salary amount. Based on the salary you have entered above the worker in total will receive approximately: ",
   "App.createJob.pageDescription": "Use the form below to create a 6-month or 12-month job.",
   "App.createJob.requirementInstructions": "Please add your requirements in order for the job to be considered as complete. Add one requirement, then click Add Requirement, to add additional requirements.",
   "App.footer.userGuide": "User Guide",
   "App.footer.getStartedGuide": "Get Started",
   "App.footer.codeOfConduct": "Code of Conduct",
-  "App.footer.company": "Travay an Electric Feel company",
+  "App.footer.company": "Travay",
   "App.codeOfCode.pageTitle": "Code of Conduct",
   "App.codeOfCode.paragraph1": "We as creators and maintainers of Travay pledge to making participation in our community a harassment-free experience for everyone, regardless of age, body size, disability, ethnicity, gender identity and expression, level of experience, nationality, personal appearance, race, religion, or sexual identity and orientation.",
   "App.codeOfCode.mission": "Our Mission",
