--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -1,5 +1,5 @@
 {
-  "App.core.description": "Travay nan long tèm mache nan Ayiti",
+  "App.core.description": "Travay nan long tèm nan Ayiti",
   "App.nav.jobs": "Travay",
   "App.nav.profile": "Pwofil",
   "App.nav.signin": "Siyen Nan",
@@ -10,7 +10,7 @@
   "App.nav.french": "Francais",
   "App.nav.english": "Angle",
   "App.nav.home": "Paj Lakay",
-  "App.signInModal.googleSignIn": "Siyen nan ak Google",
+  "App.signInModal.googleSignIn": "Konekte avék Google",
   "App.signInModal.signOutWarning": "Sonje tou siyen soti nan MetaMask, yo anpeche èskrokri. Aprann plis bagay sou èskrokri isit la: https://fr.wikipedia.org/wiki/Hame%C3%A7onnage.",
   "App.signInModal.googleSignOut": "Siyen soti ak Google",
   "App.helloMetaMask.installed": "Enstale",
@@ -19,8 +19,8 @@
   "App.helloMetaMask.balance": "Balans",
   "App.helloMetaMask.unlockMetaMask": "Tanpri déblotché MetaMask",
   "App.home.earn": "Fè lajan ki estab",
-  "App.home.sameDayJobs": "Travay menm jou",
-  "App.home.sameDayJobsDescription": "Travay bay yon sitwayen kondwi, alontèm djòb mache, ede bay mobilite ekonomik.",
+  "App.home.sameDayJobs": "Jwenn travay menm jou an",
+  "App.home.sameDayJobsDescription": "Jwenn yon travay ki bay sitwayen libète pou deside. Jwenn on travay alontèm, kap ede w jwenn mobilite ekonomik",
   "App.home.receivePayments": "Resevwa Peman Instant",
   "App.home.jobsPaidInCrypto": "Travay peye nan Cryptocurrency",
   "App.home.crypto": "Cryptocurrency Peman = instant aksè a lajan ou.",
@@ -55,11 +55,11 @@
   "App.tip.amountDescription": "Antre nan konbyen lajan ou ta renmen voye nan USD.",
   "App.job.notEditingProfileIcon": "Korije Pwofil",
   "App.profile.updateProfileTitle": "Siksè!",
-  "App.profile.updateProfileText": "Pwofil ou te aktyalizasyon!",
+  "App.profile.updateProfileText": "Pwofil ou aktyalize!",
   "App.profile.updateProfileButton": "Mete ajou Profile",
   "App.profile.optInTexts": "Mwen vle resevwa mesaj tèks lè gen nouvo djòb.",
   "App.profile.subscribeToMailingList": "Mwen vle resevwa mesaj imel lè gen nouvo djòb.",
-  "App.profile.updateProfile": "Mete ajou mobil nimewo.",
+  "App.profile.updateProfile": "Mete nimewo telefòn ou.",
   "App.profile.incompleteJobs": "Lis tout travay ki toujou louvri.",
   "App.profile.completedJobs": "Lis tout travay ki te konplete epi yo fèmen.",
   "App.profile.canceledJobs": "Lis tout travay ki te anile tout.",
@@ -138,7 +138,7 @@
   "App.createJob.pageDescription": "Itilize fòm ki anba a pou kreye yon travay 6 mwa oswa 12 mwa.",
   "App.createJob.requirementInstructions": "Tanpri ajoute kondisyon ou yo nan lòd pou travay la yo dwe konsidere kòm konplè. Add yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
   "App.footer.userGuide": "Gid Itilizatè",
-  "App.footer.getStartedGuide": "Jwenn kòmanse",
+  "App.footer.getStartedGuide": "Ann kòmanse",
   "App.footer.codeOfConduct": "Kòd Konduit",
   "App.footer.company": "Travay",
   "App.codeOfCode.pageTitle": "Kòd Konduit",
