--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -23,11 +23,11 @@
   "App.home.sameDayJobsDescription": "Jwenn yon travay ki bay sitwayen libète pou deside. Jwenn on travay alontèm, kap ede w jwenn mobilite ekonomik",
   "App.home.receivePayments": "Resevwa Peman Instant",
   "App.home.jobsPaidInCrypto": "Travay peye nan Cryptocurrency",
-  "App.home.crypto": "Cryptocurrency Peman = instant aksè a lajan ou.",
+  "App.home.crypto": "Pèman Cryptocurrency = Aksè a lajan ou koulye a.",
   "App.home.howDoesItWork": "Kijan li travay?",
-  "App.home.register": "Enskri pa siyen nan",
+  "App.home.register": "Jis enskri sèlman, ou pa bezwen anyen ankò",
   "App.home.findAndClaim": "Jwenn yon travay ou vle epi klike sou reklamasyon",
-  "App.home.whenCompleteInstructions": "Lè travay la konplete, Upload prèv ou nan travay epi klike sou travay konplè",
+  "App.home.whenCompleteInstructions": "Lè travay la konplete, mete prèv ou nan travay epi klike sou travay konplè",
   "App.home.mangerApproves": "Manadjè travay ou ap apwouve travay ak peman pwoblèm",
   "App.home.getStartedFast": "Ki jan yo kòmanse te kòmanse vit",
   "App.home.noExperienceNeed": "Jwenn yon travay, reklame li ki pa gen okenn eksperyans ki nesesè!",
