removed register function from smart contract

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -28,8 +28,8 @@
   "App.home.register": "Jis enskri sèlman, ou pa bezwen anyen ankò",
   "App.home.findAndClaim": "Jwenn yon travay ou vle epi klike sou reklamasyon",
   "App.home.whenCompleteInstructions": "Lè travay la konplete, mete prèv ou nan travay epi klike sou travay konplè",
-  "App.home.mangerApproves": "Manadjè travay ou ap apwouve travay ak peman pwoblèm",
-  "App.home.getStartedFast": "Ki jan yo kòmanse te kòmanse vit",
+  "App.home.mangerApproves": "Manadjè a ap apwouve travay ou a epi apré ap peye ou",
+  "App.home.getStartedFast": "Ki jan yo kòmanse te vit",
   "App.home.noExperienceNeed": "Jwenn yon travay, reklame li ki pa gen okenn eksperyans ki nesesè!",
   "App.home.visitWebsite": "Vizite sit entènèt sa a nan la",
   "App.sectionOne.blockTitle": "Fè lajan ki estab",
