--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -54,6 +54,7 @@
   "App.tip.receiverDescription": "Paste nan adrès ethereum moun ki ta dwe resevwa DAI ou. Sonje sa a se irevokabl konsa asire w ke ou gen adrès ki dwat!",
   "App.tip.amountDescription": "Antre nan konbyen lajan ou ta renmen voye nan USD.",
   "App.job.notEditingProfileIcon": "Korije Pwofil",
+  "App.profile.pageTitle": "Pwofil",
   "App.profile.updateProfileTitle": "Siksè!",
   "App.profile.updateProfileText": "Pwofil ou aktyalize!",
   "App.profile.updateProfileButton": "Mete ajou Profile",
