updated translations, reorged image folder, WIP implementing PWA, WIP creating a dictionary page

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -147,6 +147,7 @@
   "App.codeOfCode.mission": "Our Mission",
   "App.codeOfCode.paragraph2": "Travay’s mission is to cultivate the talent of everyday citizens for creating a restored community and economic opportunity at scale. Our 3 core values are:",
   "App.getStarted.title": "Quickly Get Started",
+  "App.getStarted.note": "Note: Travay is only available with Android and Firefox.",
   "App.getStarted.jobWorkersTitle": "Job Workers",
   "App.getStarted.install": "Install",
   "App.getStarted.browser": "browser (if on a mobile phone).",
