--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -2,7 +2,7 @@
   "App.core.description": "Travay nan long tèm nan Ayiti",
   "App.nav.jobs": "Travay",
   "App.nav.profile": "Pwofil",
-  "App.nav.signin": "Siyen Nan",
+  "App.nav.signin": "Konekte",
   "App.nav.signout": "Dekonekte",
   "App.nav.createJob": "Post yon Travay",
   "App.nav.tip": "Pwent",
@@ -17,7 +17,7 @@
   "App.helloMetaMask.network": "Rezo",
   "App.helloMetaMask.account": "Kont",
   "App.helloMetaMask.balance": "Balans",
-  "App.helloMetaMask.unlockMetaMask": "Tanpri déblotché MetaMask",
+  "App.helloMetaMask.unlockMetaMask": "Tanpri Debloke MetaMask",
   "App.home.earn": "Fè lajan ki estab",
   "App.home.sameDayJobs": "Jwenn travay menm jou an",
   "App.home.sameDayJobsDescription": "Jwenn yon travay ki bay sitwayen libète pou deside. Jwenn on travay alontèm, kap ede w jwenn mobilite ekonomik",
@@ -93,7 +93,7 @@
   "App.job.claimDescription": "Reklamasyon yon travay se tou senpleman kòm klike sou Reklamasyon bouton an. Bouton an pral sèlman vizib si travay la pa te reklame pa nenpòt moun ak yon moun ki louvri sesyon an.",
   "App.job.sponsorDescription": "Travay parennaj se kote nenpòt moun nan mond lan ka bay ak kontribye nan ekosistèm travay la. Chwazi pou patwone asire transparans nan lajan ki bay ak ankourajman travayè travay pou kontinye fè ak aksepte travay.",
   "App.job.claimDisclaimer": "Reklamasyon sa a se aksepte kondisyon travay yo, ak tèm ak kondisyon, ak kòd kondwit nan Travay.",
-  "App.job.sponsorJobButton": "Sponsor yon Travay",
+  "App.job.sponsorJobButton": "Sipòtè yon Travay",
   "App.job.proofOfWorkTitle": "Prèv Travay",
   "App.job.uploadProofOfWorkTitle": "Voye prèv travay",
   "App.job.proofOfWorkDescription": "Ki baze sou egzijans yon djòb, Manadjè Job la ka mande prèv ke travay la te fini. Pou egzanp, yon foto nan yon pye bwa plante. Si travayè a bay prèv li pral montre anba a.",
@@ -147,6 +147,7 @@
   "App.codeOfCode.mission": "Misyon nou",
   "App.codeOfCode.paragraph2": "Misyon Travay la se kiltive talan nan sitwayen chak jou pou kreye yon kominote restore ak opòtinite ekonomik nan echèl la. Nou 3 valè debaz yo se:",
   "App.getStarted.title": "Byen vit kòmanse",
+  "App.getStarted.note": "Remak: Travay se sèlman ki disponib ak Android ak Firefox.",
   "App.getStarted.jobWorkersTitle": "Travayè",
   "App.getStarted.install": "Enstale",
   "App.getStarted.browser": "navigatè (si sou telefòn mobil).",
