updated editing job fields

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -76,10 +76,9 @@
   "App.job.jobDescription": "Description",
   "App.job.jobDomain": "Domain",
   "App.job.jobSkill": "Skill",
-  "App.job.salaryIsEditing": "Salary cannot be changed after job is posted.",
-  "App.job.payFrequencyIsEditing": "Pay frequency cannot be changed after job is posted.",
-  "App.job.termOfEmploymentIsEditing": "Term of Employment cannot be changed after job is posted.",
+  "App.job.isEditingInstructions": "After a job is posted you can only update the Description and Requirements.",
   "App.job.requirementInstructions": "Add one requirement, then click Add Requirement, to add additional requirements.",
+  "App.job.jobRequirements": "Requirements",
   "App.job.addRequirement": "Add Requirement",
   "App.job.jobFullTimeRate": "Full-Time-Rate",
   "App.job.jobSponsoredAmount": "Sponsored Amount",
