--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -76,10 +76,9 @@
   "App.job.jobDescription": "Deskripsyon",
   "App.job.jobDomain": "Domèn",
   "App.job.jobSkill": "Konpetans",
-  "App.job.salaryIsEditing": "Salè pa ka chanje apre travay la afiche.",
-  "App.job.payFrequencyIsEditing": "Peye frekans pa ka chanje apre travay la afiche.",
-  "App.job.termOfEmploymentIsEditing": "Peryòd travay la pa ka chanje apre travay la afiche.",
+  "App.job.isEditingInstructions": "Apre yo fin afiche yon travay, ou ka mete ajou sèlman sou Deskripsyon ak Kondisyon.",
   "App.job.requirementInstructions": "Ajoute yon egzijans, epi klike sou Add Requirement, pou ajoute lòt kondisyon.",
+  "App.job.jobRequirements": "Kondisyon",
   "App.job.addRequirement": "Ajoute Kondisyon",
   "App.job.jobFullTimeRate": "Full-Time-Rate",
   "App.job.jobSponsoredAmount": "Patwone kantite lajan an",
